--- a/404.html
+++ b/404.html
@@ -16,29 +16,24 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <nav class="Menu">
-        
-        <div>
-            <ul class="Menucontenedor">
-               
-                <li>    
-                    <a href="salas.html"> Salas</a>
-                </li> 
-                <li>
-                    <a href="camas.html"> Camas</a>
-                </li> 
-                <li>
-                    <a href="index.html"><img src="LogoKabod.png" >
-               </li> 
-                <li>
-                    <a href="comedor.html"> Comedor</a>
-                </li> 
-                <li>
-                    <a href="contactenos.html"> Contactenos</a>
-                </li> 
-                 </ul>
-        </div>
-    </nav>
+    <header>
+        <nav class="navbar">
+            <div class="brand-title"><a href="index.html"><img src="LogoKabod.png"></div>
+            <a href="#navbar-links" class="toggle-button">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </a>
+            <div id="navbar-links">
+              <ul> 
+                <li><a href="salas.html"> Salas</a></li> 
+                <li><a href="camas.html"> Camas</a></li> 
+                <li><a href="comedor.html">Comedor</a></li> 
+                <li><a href="contactenos.html"> Contactenos</a></li> 
+              </ul>
+            </div>
+          </nav>
+    </header>
 
     <section id=grid class="FPresentacion">
         <div class="wow animate__animated animate__backInLeft" >
