entrega proyecto final 4

--- a/404.html
+++ b/404.html
@@ -37,11 +37,11 @@
 
     <section id=grid class="FPresentacion">
         <div class="wow animate__animated animate__backInLeft" >
-         <h2> <img src="/imagenes/404.jpg">
+         <h2> <img src="imagenes/404.jpg">
          </h2>
       </div>
      <div class="wow animate__animated animate__backInRight">
-         <h3>"¡Ups! no encontramos lo que buscas regresa uno de nuestros </h3>
+         <h3>"¡Ups! no encontramos lo que buscas regresa uno de nuestras secciones  </h3>
      </div>
  </section>
 </body>    
