--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/Slider/Recurso 1.png" class="d-block w-100" alt="...">
+            <img src="imagenes/slider/recurso1.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/Slider/Recurso 2.png" class="d-block w-100" alt="...">
+            <img src="imagenes/slider/Recurso2.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/Slider/Recurso 3.png" class="d-block w-100" alt="...">
+            <img src="imagenes/slider/recurso3.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/Slider/Recurso 4.png" class="d-block w-100" alt="...">
+            <img src="imagenes/slider/recurso4.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
