cambio de colores footer y nav

--- a/404.html
+++ b/404.html
@@ -26,10 +26,10 @@
             </a>
             <div id="navbar-links">
               <ul> 
-                <li><a href="salas.html"> Salas</a></li> 
-                <li><a href="camas.html"> Camas</a></li> 
-                <li><a href="comedor.html">Comedor</a></li> 
-                <li><a href="contactenos.html"> Contactenos</a></li> 
+                <li><a href="salas.html"> SALAS</a></li> 
+            <li><a href="camas.html"> CAMAS</a></li> 
+            <li><a href="comedor.html">COMEDORES</a></li> 
+            <li><a href="contactenos.html"> CONTACTENOS</a></li>  
               </ul>
             </div>
           </nav>
