--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </a>
         <div id="navbar-links">
           <ul> 
-            <li><a href="salas.html"> Salas</a></li> 
-            <li><a href="camas.html"> Camas</a></li> 
-            <li><a href="comedor.html">Comedor</a></li> 
-            <li><a href="contactenos.html"> Contactenos</a></li> 
+            <li><a href="salas.html"> SALAS</a></li> 
+            <li><a href="camas.html"> CAMAS</a></li> 
+            <li><a href="comedor.html">COMEDORES</a></li> 
+            <li><a href="contactenos.html"> CONTACTENOS</a></li> 
           </ul>
         </div>
       </nav>
@@ -57,7 +57,7 @@
             <img src="imagenes/slider/recurso1.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/slider/Recurso2.png" class="d-block w-100" alt="...">
+            <img src="imagenes/slider/recurso2.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="imagenes/slider/recurso3.png" class="d-block w-100" alt="...">
@@ -117,19 +117,19 @@
      <h3>Siguenos</h3>
      <ul>
          <li><a href="https://www.facebook.com/kabodmuebles" target="_blank">
-          <img src="imagenes/footer/facebook-brands.svg"/>
+          <img src="imagenes/footer/facebook-brands.webp"/>
           <a href="https://www.facebook.com/kabodmuebles"target="_blank" class="footermobile">   Facebook</a>
           </li>
          <li><a href="https://www.instagram.com/kabodmuebles/" target="_blank">
-              <img src="imagenes/footer/instagram-brands.svg"/>
+              <img src="imagenes/footer/instagram-brands.webp"/>
               <a href="https://www.instagram.com/kabodmuebles/"target="_blank" class="footermobile"> Instagram</a>
          </li>
          <li><a href="https://api.whatsapp.com/send?phone=573015007303" target="_blank">
-             <img src="imagenes/footer/whatsapp-brands.svg"/>    
+             <img src="imagenes/footer/whatsapp-brands.webp"/>    
              <a href="https://api.whatsapp.com/send?phone=573015007303" target="_blank" class="footermobile">WhatsApp</a>
          </li>
          <li> <a href="mailto:Kabodmuebles@gmail.com" target="_blank">
-               <img src="imagenes/footer/envelope-square-solid.svg"/>
+               <img src="imagenes/footer/envelope-square-solid.webp"/>
                <a href="mailto:Kabodmuebles@gmail.com" target="_blank" class="footermobile"> Correo</a>
           </li>
      </ul>
