--- a/contactenos.html
+++ b/contactenos.html
@@ -8,9 +8,9 @@
     
  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
  <link    rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>  <!--animate.css-->
- <link rel="stylesheet" href="style2.css"></head>  <!--mi hoja de estilos-->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> <!--Bootstrap-->
-
+ <link rel="stylesheet" href="/css/estilos.css">  <!--mi hoja de estilos-->
+</head>
 <body> 
     <header>
         <nav class="navbar">
