--- a/contactenos.html
+++ b/contactenos.html
@@ -53,7 +53,7 @@
                
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Telefono</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" name="Telefono" placeholder="XXX-XXX-XXXX" required>
+                    <input type="tel" class="form-control" name="Telefono" placeholder="XXX-XXX-XXXX" required>
                 </div> 
 
                 <select class="form-select" aria-label="Default select example" name="interes">
